Fix homepage buttons (margin bottom and spacing)

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -12,10 +12,11 @@
 
 .button-wrapper {
   display: flex;
+  gap: 20px;
+  margin-bottom: 10vh;
 }
 
 button {
-  margin-bottom: 10vh;
   padding: 0.625em 1.25em;
   background-color: #0d0900;
   border-radius: 5px;
